# offmind-mcp

./: .gitignore  README.md  manifest.json  offmind-mcp.mcpb  pyproject.toml
src/: __init__.py  api_client.py  auth.py  firebase_auth.py  server.py
src/tools/: __init__.py  task_mutations.py  task_queries.py  utils.py
