[project]
name = "offmind-mcp"
version = "0.1.0"
description = "MCP server for Offmind app"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
    "typer>=0.9.0",
]

[project.urls]
Homepage = "https://github.com/vladoun/offmind-mcp"
Repository = "https://github.com/vladoun/offmind-mcp"
Issues = "https://github.com/vladoun/offmind-mcp/issues"

[project.scripts]
offmind-mcp = "src.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = []
